Rewrote the isSpaceDebris function and added the warning class to the satellite type td. However, code does not work. Saving what I have so I can move on and get TA input.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,4 @@
 
 <app-orbit-counts [satellites]="displayList"></app-orbit-counts>
 
-<!-- TODO 1: add list component to app HTML -->
+<!--  1: add list component to app HTML -->
